--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "embla-carousel-react": "^8.0.0-rc21",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.0.5",
@@ -34,7 +35,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
+    "postcss": "^8.4.33",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
